--- a/index.mdx
+++ b/index.mdx
@@ -1,212 +1,27 @@
 ---
-title: "Introduction to Openinary"
-description: "Open source media CDN powered by Cloudflare - The modern alternative to Cloudinary"
+title: "Introduction"
+description: "Modern image and video processing server with cloud storage"
 ---
 
-# Welcome!
+> The promise is simple: store your media in an environment you trust. We are an open-source and self-hostable alternative to Cloudinary.
 
-**We're Cloudinary, but open source. Powered by Cloudflare.**
+In an era where developers are increasingly locked into proprietary platforms, we believe in giving you back control. The dominance of closed-source services creates vendor lock-in, unpredictable pricing, and limited transparency; leaving developers at the mercy of corporate decisions. Open source is the solution: it ensures transparency, prevents vendor lock-in, gives you the freedom to customize and extend the platform to your needs, and keeps your data truly yours. By choosing open source, you're investing in a future where technology serves developers, not the other way around.
 
-Openinary is an open source, Cloudflare-native media CDN that lets you upload, transform, and deliver images and videos from the edge. Built for developers, no-code builders, and indie creators who want fast, modern, self-hostable media infrastructure.
+This freedom doesn't mean compromising on features. Transform your media on-the-fly with a simple and powerful API. Resizing, optimized formats, smart caching, and cloud storage (AWS S3 / Cloudflare R2).
 
-<Info>
-  Openinary is currently under active development. This documentation evolves
-  with the project.
-</Info>
+## Features
 
-## Why Openinary?
-
-Most media CDNs are closed, expensive, and built for enterprise. We're building Openinary to be:
-
-<CardGroup cols={2}>
-  <Card title="Open" icon="code">
-    MIT-licensed, transparent, easy to contribute to
+<Columns cols={2}>
+  <Card title="Images" icon="image">
+    Resize, crop, rotate, with modern formats compatibility (AVIF, WebP)
   </Card>
-  <Card title="Fast" icon="zap">
-    Edge-first with Cloudflare Workers and R2
+  <Card title="Videos" icon="video">
+    Transform, compress, resize
   </Card>
-  <Card title="Modular" icon="puzzle">
-    Easily pluggable in any stack or tool
+  <Card title="Cloud Storage" icon="cloud">
+    AWS S3 and Cloudflare R2 support
   </Card>
-  <Card title="Focused" icon="target">
-    Just the essentials: upload, transform, deliver
+  <Card title="Smart caching" icon="zap">
+    Local + cloud for optimal performance
   </Card>
-</CardGroup>
-
-## Technical Stack
-
-Openinary leverages the Cloudflare ecosystem to deliver optimal performance:
-
-| Layer       | Technology                   | Role                       |
-| ----------- | ---------------------------- | -------------------------- |
-| CDN & Logic | **Cloudflare Workers**       | Edge processing and API    |
-| Storage     | **Cloudflare R2**            | Distributed object storage |
-| UI          | React + Tailwind (via Pages) | Modern user interface      |
-| Upload UX   | REST API + drag & drop UI    | Upload experience          |
-| Infra       | Wrangler CLI                 | Deployment and management  |
-
-## Key Features
-
-<Tip>
-  These features represent Openinary's MVP roadmap. Development is ongoing.
-</Tip>
-
-<AccordionGroup>
-  <Accordion title="Upload and Storage">
-    - Upload media via REST API
-    - Serve media from R2
-    - Drag & drop interface
-  </Accordion>
-
-{" "}
-
-<Accordion title="Transformation and Optimization">
-  - Transform images on-the-fly via URL - Automatic format optimization - Smart
-  resizing - Edge caching
-</Accordion>
-
-{" "}
-
-<Accordion title="Management and Metadata">
-  - UI for uploads + previews - Folder management and organization - Performance
-  analytics - Metadata storage
-</Accordion>
-
-  <Accordion title="Deployment">
-    - Easy deployment with Wrangler CLI
-    - Configuration via environment variables
-    - Multi-environment support
-    - Self-hosting documentation
-  </Accordion>
-</AccordionGroup>
-
-## Use Cases
-
-Openinary is perfect for:
-
-<CardGroup cols={2}>
-  <Card title="Personal Sites" icon="user">
-    You're building a personal site and need fast image delivery.
-  </Card>
-  <Card title="No-Code Tools" icon="wrench">
-    You're a no-code tool developer looking to offer media uploads.
-  </Card>
-  <Card title="Self-Hosted Apps" icon="server">
-    You're self-hosting a blog, app or internal tool with image needs.
-  </Card>
-  <Card title="Cloudinary Alternative" icon="refresh-cw">
-    You want to escape Cloudinary's limits and take control.
-  </Card>
-</CardGroup>
-
-## Project Architecture
-
-Openinary is organized as a monorepo with multiple applications:
-
-<Tabs>
-  <Tab title="API (Cloudflare Workers)">
-    The main API that handles uploads, transformations, and media delivery.
-
-    ```typescript
-    // API structure
-    apps/api/
-    ├── src/
-    │   ├── index.ts      // Worker entry point
-    │   └── types.d.ts    // TypeScript definitions
-    ├── wrangler.toml     // Cloudflare configuration
-    └── package.json
-    ```
-
-  </Tab>
-
-  <Tab title="Web (Dashboard)">
-    Admin interface to manage your media.
-
-    ```typescript
-    // Web dashboard
-    apps/web/
-    ├── app/             // User interface
-    ├── lib/             // Hooks and providers
-    └── [folderKey]/     // Folder management
-    ```
-
-  </Tab>
-</Tabs>
-
-## Run Locally
-
-<Steps>
-  <Step title="Clone the repository">
-    ```bash
-    git clone https://github.com/openinary/openinary.git
-    cd openinary
-    ```
-  </Step>
-
-  <Step title="Install dependencies">
-    ```bash
-    pnpm install
-    ```
-
-    <Note>
-    Openinary uses pnpm for dependency management and Turbo for the monorepo.
-    </Note>
-
-  </Step>
-
-  <Step title="Configure environment">
-    Set up your Cloudflare environment variables in each application.
-
-    <Warning>
-    You'll need a Cloudflare account with access to Workers and R2.
-    </Warning>
-
-  </Step>
-
-  <Step title="Start development">
-    ```bash
-    pnpm dev
-    ```
-
-    <Check>
-    All applications will start in parallel thanks to Turbo.
-    </Check>
-
-  </Step>
-</Steps>
-
-## Contributing
-
-We're just getting started — and we'd love your help!
-
-<CardGroup cols={2}>
-  <Card
-    title="Backend & API"
-    icon="server"
-    href="https://github.com/openinary/openinary/issues"
-  >
-    Contribute to Cloudflare Workers API development
-  </Card>
-  <Card
-    title="User Interface"
-    icon="palette"
-    href="https://github.com/openinary/openinary/issues"
-  >
-    Improve React interfaces and user experience
-  </Card>
-</CardGroup>
-
-Whether you're into backend or UI, you're welcome. Start by checking the [issues](https://github.com/openinary/openinary/issues) or say hi in Discussions.
-
-## License
-
-<Card title="MIT License" icon="scale">
-  Use it freely. Fork it. Improve it. Let's build it together.
-</Card>
-
----
-
-<Note>
-  This documentation evolves with the project. Feel free to contribute to
-  improve it!
-</Note>
+</Columns>
