chore: update navigation to reflect changes in the local development and quick start guides.

--- a/index.mdx
+++ b/index.mdx
@@ -9,19 +9,23 @@ In an era where developers are increasingly locked into proprietary platforms, w
 
 This freedom doesn't mean compromising on features. Transform your media on-the-fly with a simple and powerful API. Resizing, optimized formats, smart caching, and cloud storage (AWS S3 / Cloudflare R2).
 
-## Features
+## Get started
 
 <Columns cols={2}>
-  <Card title="Images" icon="image">
-    Resize, crop, rotate, with modern formats compatibility (AVIF, WebP)
+  <Card
+    title="Quick Start"
+    icon="flag"
+    href="/quickstart"
+    arrow="true"
+  >
+    Run Openinary locally with Docker in just a few commands.
   </Card>
-  <Card title="Videos" icon="video">
-    Transform, compress, resize
-  </Card>
-  <Card title="Cloud Storage" icon="cloud">
-    AWS S3 and Cloudflare R2 support
-  </Card>
-  <Card title="Smart caching" icon="zap">
-    Local + cloud for optimal performance
+  <Card
+    title="Local Development"
+    icon="flag"
+    href="/local-development"
+    arrow="true"
+  >
+    Start developing Openinary locally and customize it to your needs.
   </Card>
 </Columns>
