--- a/local-development.mdx
+++ b/local-development.mdx
@@ -3,25 +3,114 @@ title: "Local Development"
 description: "Guide for developing Openinary locally"
 ---
 
+## Prerequisites
+
+<Tabs>
+
+  <Tab title="Node.js">
+
+    - **Node.js**: Version 18.0.0 or higher
+
+    ```bash
+    node --version  # Should be >= 18.0.0
+    ```
+
+  </Tab>
+
+  <Tab title="pnpm">
+
+    - **pnpm**: Version 9.0.0 or higher
+
+    ```bash
+    # Install pnpm if not already installed
+    npm install -g pnpm@9.0.0
+
+    # Verify installation
+    pnpm --version
+    ```
+
+  </Tab>
+
+  <Tab title="FFmpeg">
+
+    - **FFmpeg**: Required for video processing
+
+    <CodeGroup>
+
+    ```bash macOS
+    brew install ffmpeg
+    ```
+
+    ```bash Windows
+    # Download a Windows build from:
+    # https://ffmpeg.org/download.html#build-windows
+    ```
+
+    ```bash Linux (Ubuntu/Debian)
+    sudo apt-get install ffmpeg
+    ```
+
+    ```bash Linux (Fedora)
+    sudo dnf install ffmpeg
+    ```
+
+    ```bash Verify installation
+    ffmpeg -version
+    ```
+
+    </CodeGroup>
+
+  </Tab>
+
+  <Tab title="Optional">
+
+    - **Cloud Storage Credentials**: Only required if using cloud storage mode (AWS S3 or Cloudflare R2)
+      - For local development, files can be placed in `apps/api/public/`
+      - See Configuration section in main README for cloud setup
+
+  </Tab>
+
+</Tabs>
+
+## Clone the repository
+
+Clone Openinary and move into the project directory:
+
+```bash
+git clone https://github.com/openinary/openinary.git
+cd openinary
+```
+
+## Installation
+
+Install all dependencies:
+
+```bash
+pnpm install
+```
+
 ## Start Everything
+
+Start both the API and frontend:
 
 ```bash
 pnpm dev
 ```
 
-This will start both the API and Frontend simultaneously.
+This will start both the API and frontend simultaneously.
 
 ## Start Separately
 
-```bash
-pnpm dev:api
-```
+Run the API and frontend separately:
 
 ```bash
+pnpm dev:api
 pnpm dev:web
 ```
 
 ## Build all
+
+Build all packages:
 
 ```bash
 pnpm build
@@ -29,7 +118,8 @@ pnpm build
 
 ## Lint all
 
+Run all linters:
+
 ```bash
 pnpm lint
 ```
-
