chore: update icons for Quick Start and Local Development cards in index.mdx

--- a/index.mdx
+++ b/index.mdx
@@ -14,7 +14,7 @@ This freedom doesn't mean compromising on features. Transform your media on-the-
 <Columns cols={2}>
   <Card
     title="Quick Start"
-    icon="flag"
+    icon="bolt"
     href="/quickstart"
     arrow="true"
   >
@@ -22,7 +22,7 @@ This freedom doesn't mean compromising on features. Transform your media on-the-
   </Card>
   <Card
     title="Local Development"
-    icon="flag"
+    icon="brackets-curly"
     href="/local-development"
     arrow="true"
   >
