docs: restructure documentation to improve navigation and enhance content clarity

--- a/index.mdx
+++ b/index.mdx
@@ -1,31 +1,80 @@
 ---
-title: "Introduction"
-description: "Modern image and video processing server with cloud storage"
+title: "Welcome to Openinary"
+description: "Open-source, self-hostable image and video processing platform with on-the-fly transformations and cloud storage integration"
 ---
 
-> The promise is simple: store your media in an environment you trust. We are an open-source and self-hostable alternative to Cloudinary.
+<Info>
+**Store your media in an environment you trust.** Openinary is an open-source and self-hostable alternative to Cloudinary, giving you complete control over your media assets.
+</Info>
 
-In an era where developers are increasingly locked into proprietary platforms, we believe in giving you back control. The dominance of closed-source services creates vendor lock-in, unpredictable pricing, and limited transparency; leaving developers at the mercy of corporate decisions. Open source is the solution: it ensures transparency, prevents vendor lock-in, gives you the freedom to customize and extend the platform to your needs, and keeps your data truly yours. By choosing open source, you're investing in a future where technology serves developers, not the other way around.
+## Why Openinary?
 
-This freedom doesn't mean compromising on features. Transform your media on-the-fly with a simple and powerful API. Resizing, optimized formats, smart caching, and cloud storage (AWS S3 / Cloudflare R2).
+In an era where developers are increasingly locked into proprietary platforms, Openinary gives you back control. The dominance of closed-source services creates vendor lock-in, unpredictable pricing, and limited transparency—leaving developers at the mercy of corporate decisions.
+
+**Open source is the solution:**
+
+- **Transparency**: Full visibility into how your media is processed and stored
+- **No vendor lock-in**: Your infrastructure, your rules, your timeline
+- **Complete customization**: Extend and modify the platform to fit your exact needs
+- **Data ownership**: Your media assets stay truly yours
+
+<Tip>
+By choosing open source, you're investing in a future where technology serves developers, not the other way around.
+</Tip>
+
+## Key features
+
+This freedom doesn't mean compromising on capabilities. Openinary delivers enterprise-grade media processing with a simple, powerful API:
+
+- **On-the-fly transformations**: Resize, crop, and optimize images and videos dynamically
+- **Intelligent format optimization**: Automatic WebP, AVIF, and modern video codec conversion
+- **Smart caching**: Built-in caching layer for lightning-fast delivery
+- **Cloud storage integration**: Seamless support for AWS S3 and Cloudflare R2
+- **Self-hosted control**: Deploy on your infrastructure with full operational control
 
 ## Get started
 
-<Columns cols={2}>
+<CardGroup cols={2}>
   <Card
     title="Quick Start"
     icon="bolt"
     href="/quickstart"
-    arrow="true"
   >
     Run Openinary locally with Docker in just a few commands.
   </Card>
   <Card
     title="Local Development"
-    icon="brackets-curly"
+    icon="code"
     href="/local-development"
-    arrow="true"
   >
-    Start developing Openinary locally and customize it to your needs.
+    Set up a development environment and customize Openinary to your needs.
   </Card>
-</Columns>
+  <Card
+    title="Media Transformations"
+    icon="wand-magic-sparkles"
+    href="/media-transformations/overview"
+  >
+    Learn how to transform images and videos with powerful API parameters.
+  </Card>
+  <Card
+    title="Configuration"
+    icon="gear"
+    href="/configuration"
+  >
+    Configure storage backends, caching, and optimization settings.
+  </Card>
+</CardGroup>
+
+## Use cases
+
+Openinary is built for developers who need flexible, powerful media processing:
+
+- **Web applications**: Serve responsive images automatically sized for any device
+- **E-commerce platforms**: Optimize product images for fast loading and conversion
+- **Content management systems**: Handle user-generated content with automatic optimization
+- **Mobile applications**: Deliver perfectly sized assets for iOS and Android apps
+- **Digital asset management**: Organize and transform media libraries at scale
+
+<Note>
+Whether you're building a startup MVP or scaling an enterprise application, Openinary adapts to your needs without the constraints of proprietary platforms.
+</Note>
