--- a/project-structure.mdx
+++ b/project-structure.mdx
@@ -3,9 +3,11 @@ title: "Project Structure"
 description: "Understanding the Openinary monorepo structure"
 ---
 
+<Info>
 Openinary is organized as a monorepo with the following structure:
+</Info>
 
-```
+```bash
 openinary/
 ├── apps/
 │   ├── api/          # Media processing API
@@ -18,15 +20,31 @@ openinary/
 
 ## Apps
 
-- **api/**: The main media processing API that handles transformations, uploads, and delivery
-- **web/**: Next.js frontend application for managing media
+<CardGroup cols={2}>
+<Card title="api" icon="server">
+The main media processing API that handles transformations, uploads, and delivery
+</Card>
+
+<Card title="web" icon="browser">
+Next.js frontend application for managing media
+</Card>
+</CardGroup>
 
 ## Packages
 
-- **shared/**: Shared TypeScript types and utilities used across apps
+<Card title="shared" icon="box">
+Shared TypeScript types and utilities used across apps
+</Card>
 
 ## Docker
 
-- **docker/**: Contains optimized Dockerfiles for containerized deployments
-- **docker-compose.yml**: Docker Compose configuration for local development
+<AccordionGroup>
+<Accordion title="docker/" icon="docker">
+Contains optimized Dockerfiles for containerized deployments
+</Accordion>
+
+<Accordion title="docker-compose.yml" icon="file">
+Docker Compose configuration for local development
+</Accordion>
+</AccordionGroup>
 
