--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -18,7 +18,7 @@ description: "Get started with Openinary in minutes"
 
 ## Quick Start
 
-Run Openinary locally with Docker in just a few commands. The setup runs the API and the Dashboard in a single container:
+Run Openinary locally with Docker in just a few commands. Openinary supports two deployment modes depending on your needs.
 
 <Steps>
 
@@ -55,27 +55,52 @@ cd openinary
 
   </Step>
 
-  <Step title="Build and start all services">
+  <Step title="Choose your deployment mode">
 
-```bash
-docker-compose up --build
-```
+  Select the deployment mode that fits your use case:
+
+  <Tabs>
+
+  <Tab title="Mode 1: API Only">
+
+  Deploy only the Hono API server for backend services and integrations.
+
+  ```bash
+  # Start API only
+  docker compose --profile api up --build
+
+  # Run in background
+  docker compose --profile api up -d --build
+  ```
+
+  **Access**: API available at http://localhost:3000
+
+  </Tab>
+
+  <Tab title="Mode 2: API + Dashboard">
+
+  Deploy the complete stack (API + Next.js frontend) with nginx as a reverse proxy. All traffic goes through port 3000:
+
+  - `/` → Next.js frontend
+  - `/api` → Hono API
+
+  ```bash
+  # Start api + dashboard
+  docker compose --profile full up --build
+
+  # Run in background
+  docker compose --profile full up -d --build
+  ```
+
+  **Access**: Application available at http://localhost:3000
+
+  </Tab>
+
+  </Tabs>
 
   </Step>
 
 </Steps>
-
-**That's it!** Docker will:
-- Build the API and Web applications in a single container
-- Install all dependencies automatically
-- Start all services (API on port 3002, Web on port 3001, Nginx on port 3000)
-
-## Access Your Applications
-
-Once the container is running, access everything at:
-
-- **Main Application**: http://localhost:3000
-- **API Endpoints**: http://localhost:3000/api
 
 ## Test with Sample Files
 
@@ -85,29 +110,31 @@ Sample files are available in `/apps/api/public/` for testing:
 
 ## Stopping the Application
 
-To stop all services:
+To stop services, use the same profile you started with:
+
+<Tabs>
+
+<Tab title="API Only">
 
 ```bash
-# Stop and remove containers
-docker-compose down
-
-# Stop containers and remove volumes (clears cache)
-docker-compose down -v
+docker compose --profile api down
 ```
 
-## API-Only Mode
+</Tab>
 
-If you only need the API without the frontend:
+<Tab title="API + Dashboard">
 
 ```bash
-# Start API only
-docker compose --profile api up --build
-
-# Run in background
-docker compose --profile api up -d --build
+docker compose --profile full down
 ```
 
-The API will be available at http://localhost:3000
+</Tab>
+
+</Tabs>
+
+<Tip>
+Add the `-v` flag to also remove volumes and clear cache: `docker compose --profile api down -v`
+</Tip>
 
 ## Development Mode (Alternative)
 
