docs: update Docker commands in Quick Start and security guide for consistency

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -46,7 +46,7 @@ Ideal for managing your users, API keys, and media through a web interface.
 <Step title="Start with Docker">
 
 ```bash
-docker-compose --profile full up --build
+docker compose --profile full up --build
 ```
 
 </Step>
@@ -78,7 +78,7 @@ Ideal for pure backend usage with your own application.
 <Step title="Start with Docker">
 
 ```bash
-docker-compose --profile api up --build
+docker compose --profile api up --build
 ```
 
 <Warning>
