--- a/security.mdx
+++ b/security.mdx
@@ -220,7 +220,7 @@ docker exec openinary_api sqlite3 /app/data/auth.db "PRAGMA integrity_check;"
 <Step title="Restore from backup">
 ```bash
 docker exec openinary_api /app/scripts/restore-db.sh /backup/latest.db.gz
-docker-compose restart
+docker compose restart
 ```
 </Step>
 </Steps>
