--- a/security.mdx
+++ b/security.mdx
@@ -98,7 +98,7 @@ curl -H "Authorization: Bearer sk_your_key_here" \
 
 **All protected endpoints:**
 
-- `GET /t/*` - Image transformation
+- `GET /t/*` - Image and video transformation
 - `POST /upload/*` - File upload
 - `GET/POST /storage/*` - Storage operations
 
