--- a/media-transformations/image-transformations.mdx
+++ b/media-transformations/image-transformations.mdx
@@ -3,18 +3,43 @@ title: "Image Transformations"
 description: "Resize, crop, rotate, and optimize images with powerful URL-based parameters"
 ---
 
+## Parameter Reference
+
+Quick reference for all available parameters:
+
+| Parameter | Full Name | Description |
+|-----------|-----------|-------------|
+| `w` | width | Image width in pixels |
+| `h` | height | Image height in pixels |
+| `c` | crop | Crop mode for resizing |
+| `ar` | aspect ratio | Aspect ratio (format: `W:H`) |
+| `a` | angle | Rotation angle in degrees |
+| `g` | gravity | Focal point for cropping |
+| `b` | background | Background color |
+| `q` | quality | Compression quality (1-100) |
+| `f` | format | Output format (avif, webp, jpeg, png) |
+
 ## Core Parameters
 
-<ParamField path="resize" type="string">
-  Resize the image to specified dimensions using the format `WxH`.
+<ParamField path="w" type="integer">
+  Set the width of the image in pixels.
   
   **Examples:**
-  - `resize:800x600` - Resize to 800×600 pixels
-  - `resize:1920x1080` - Resize to Full HD dimensions
-  - `resize:400x400` - Resize to square format
+  - `w_800` - Set width to 800 pixels
+  - `w_1920` - Set width to Full HD
+  - `w_400` - Set width to 400 pixels
 </ParamField>
 
-<ParamField path="crop" type="string" default="fill">
+<ParamField path="h" type="integer">
+  Set the height of the image in pixels.
+  
+  **Examples:**
+  - `h_600` - Set height to 600 pixels
+  - `h_1080` - Set height to Full HD
+  - `h_400` - Set height to 400 pixels
+</ParamField>
+
+<ParamField path="c" type="string" default="fill">
   Define how the image is cropped during resizing.
   
   **Available modes:**
@@ -25,17 +50,16 @@ description: "Resize, crop, rotate, and optimize images with powerful URL-based 
   - `pad` - Fit and add borders with background color
 </ParamField>
 
-<ParamField path="aspect" type="string">
+<ParamField path="ar" type="string">
   Apply a specific aspect ratio by cropping the image. Format: `W:H`.
   
   **Common ratios:**
-  - `aspect:16:9` - Widescreen video format
-  - `aspect:1:1` - Square format (Instagram)
-  - `aspect:4:3` - Classic photo format
-  - `aspect:21:9` - Ultrawide banner format
+  - `ar_16:9` - Widescreen video format
+  - `ar_1:1` - Square format (Instagram)
+  - `ar_4:3` - Classic photo format
 </ParamField>
 
-<ParamField path="rotate" type="string | number">
+<ParamField path="a" type="string | number">
   Rotate the image by specified degrees or automatically using <Tooltip tip="Exchangeable Image File Format - metadata stored in image files">EXIF</Tooltip> data.
   
   **Values:**
@@ -43,7 +67,7 @@ description: "Resize, crop, rotate, and optimize images with powerful URL-based 
   - `0-360` - Rotation angle in degrees
 </ParamField>
 
-<ParamField path="gravity" type="string" default="center">
+<ParamField path="g" type="string">
   Define the focal point for cropping operations.
   
   **Available positions:**
@@ -56,15 +80,14 @@ description: "Resize, crop, rotate, and optimize images with powerful URL-based 
   - `auto` - Automatic detection of region of interest using entropy analysis
 </ParamField>
 
-<ParamField path="background" type="string">
+<ParamField path="b" type="string">
   Set background color for rotation or pad crop mode.
   
-  **Formats:**
-  - Hexadecimal without `#`: `FF0000` (red), `FFFFFF` (white)
-  - `transparent` - Transparent background (PNG/WebP output)
+  **Format:**
+  - `b_rgb:ffffff` - Hexadecimal color without `#` (e.g., `b_rgb:ffffff` for white, `b_rgb:ff0000` for red)
 </ParamField>
 
-<ParamField path="quality" type="integer" default="85">
+<ParamField path="q" type="integer" default="85">
   Control compression quality level. Range: 1-100.
   
   **Recommendations:**
@@ -74,7 +97,7 @@ description: "Resize, crop, rotate, and optimize images with powerful URL-based 
   - `1-59` - Maximum compression, visible artifacts
 </ParamField>
 
-<ParamField path="format" type="string">
+<ParamField path="f" type="string">
   Force a specific output format.
   
   **Available formats:**
@@ -90,7 +113,7 @@ description: "Resize, crop, rotate, and optimize images with powerful URL-based 
 <Tab title="Basic Resize">
 
 ```http
-GET /t/resize:800x600/image.jpg
+GET /t/w_800,h_600/image.jpg
 ```
 
 Resize an image to 800×600 pixels using default fill mode.
@@ -100,7 +123,7 @@ Resize an image to 800×600 pixels using default fill mode.
 <Tab title="Smart Cropping">
 
 ```http
-GET /t/resize:400x400/crop:fill/gravity:face/portrait.jpg
+GET /t/w_400,h_400,c_fill,g_face/portrait.jpg
 ```
 
 Create a square thumbnail with face detection for optimal framing.
@@ -110,17 +133,17 @@ Create a square thumbnail with face detection for optimal framing.
 <Tab title="Aspect Ratio">
 
 ```http
-GET /t/aspect:16:9/gravity:auto/resize:1920x1080/banner.jpg
+GET /t/ar_16:9,w_1920,h_1080/banner.jpg
 ```
 
-Apply widescreen ratio with automatic focal point detection.
+Apply widescreen ratio with automatic cropping.
 
 </Tab>
 
 <Tab title="Format Conversion">
 
 ```http
-GET /t/resize:1200x800/format:avif/quality:80/photo.jpg
+GET /t/w_1200,h_800,f_avif,q_80/photo.jpg
 ```
 
 Resize and convert to AVIF format with optimized compression.
@@ -134,7 +157,7 @@ Resize and convert to AVIF format with optimized compression.
 <Accordion title="Instagram-optimized portrait">
 
 ```http
-GET /t/aspect:1:1/resize:1080x1080/gravity:face/quality:85/format:webp/portrait.jpg
+GET /t/ar_1:1,w_1080,h_1080,g_face,q_85,f_webp/portrait.jpg
 ```
 
 Perfect square format with face-focused cropping and WebP output for social media.
@@ -144,7 +167,7 @@ Perfect square format with face-focused cropping and WebP output for social medi
 <Accordion title="Responsive thumbnail with padding">
 
 ```http
-GET /t/resize:400x300/crop:pad/background:F5F5F5/quality:80/thumbnail.jpg
+GET /t/w_400,h_300,c_pad,b_rgb:f5f5f5,q_80/thumbnail.jpg
 ```
 
 Create a padded thumbnail with light gray background for consistent dimensions.
@@ -154,17 +177,17 @@ Create a padded thumbnail with light gray background for consistent dimensions.
 <Accordion title="Rotated logo with transparency">
 
 ```http
-GET /t/rotate:15/background:transparent/resize:200x200/logo.png
+GET /t/a_15,w_200,h_200/logo.png
 ```
 
-Rotate a logo while maintaining transparent background for web overlays.
+Rotate a logo by 15 degrees. PNG format preserves transparency automatically.
 
 </Accordion>
 
 <Accordion title="Web-optimized landscape photo">
 
 ```http
-GET /t/resize:1920x1080/quality:85/format:avif/landscape.jpg
+GET /t/w_1920,h_1080,q_85,f_avif/landscape.jpg
 ```
 
 Full HD output with AVIF format for maximum compression and quality balance.
@@ -207,11 +230,11 @@ If no format is specified, the system automatically selects the optimal format b
 
 <CardGroup cols={2}>
 <Card title="Optimize for web" icon="globe">
-  Use `quality:85` with automatic format selection for the best balance of quality and file size.
+  Use `q_85` with automatic format selection for the best balance of quality and file size.
 </Card>
 
 <Card title="Leverage face detection" icon="user">
-  Apply `gravity:face` for portraits and profile images to ensure faces remain in frame after cropping.
+  Apply `g_face` for portraits and profile images to ensure faces remain in frame after cropping.
 </Card>
 
 <Card title="Batch similar sizes" icon="layer-group">
@@ -219,7 +242,7 @@ If no format is specified, the system automatically selects the optimal format b
 </Card>
 
 <Card title="Use modern formats" icon="rocket">
-  Specify `format:avif` or `format:webp` for significant file size reductions on modern browsers.
+  Specify `f_avif` or `f_webp` for significant file size reductions on modern browsers.
 </Card>
 </CardGroup>
 
