docs: update sample files name in Quick Start

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -85,8 +85,8 @@ Your Openinary instance is operational.
 ## Test with Sample Files
 
 Sample files are available in the container at `/app/apps/api/public/` for testing:
-- `image.png` - Test image transformations
-- `video.mp4` - Test video transformations
+- `example-loan.jpg` - Test image transformations
+- `example-rahime-gul.mp4` - Test video transformations
 
 ## Connecting External S3-Compatible Storage
 
